--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,10 @@ html, body {
 }
 
 .button-container {
-    vertical-align: middle
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 .button-open {
@@ -15,7 +18,7 @@ html, body {
 }
 
 .button-open:hover {
-    background-color: rgba(255, 0, 0, 0.5);
+    background-color: rgba(0, 128, 0, 0.5);
     cursor: pointer;
 }
 
